SPM-1690: fix openapi spec
